clusters/beryjuio-home/ansible-ara/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ara
  namespace: ansible-ara
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ara
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ara
    spec:
      containers:
        - name: ara
          image: proxy.registry.beryju.io/recordsansible/ara-api:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
              name: http
